# pbix-mcp

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  calc_tables.py  datamodel_roundtrip.py  dax_engine.py  demo_report.pbix  pbix_mcp_server.py  pyproject.toml  requirements.txt  test_2_measures.pbix  test_3_measures.pbix  test_51st_measure.pbix  test_5_measures.pbix  test_noop_roundtrip.pbix  test_one_measure.pbix  test_recompress_one.pbix  test_ten_constants.pbix  vertipaq_encoder.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  html-visuals.md  limitations.md  rich-content.md  supported-dax.md  tool-contracts.md  vertipaq-spec.md
examples/: create_all_types.py  create_directquery.py  create_from_csv.py  create_from_sqlite.py  create_showcase.py  create_star_schema.py  html_visual_pure_python.py
scripts/: build_fixtures.py  create_demo_report.py  download_test_corpus.py  test_datatable.py  test_real_bytes.py
src/pbix_mcp/: __init__.py  builder.py  builder_v2.py  cli.py  errors.py  html_templates.py  logging_config.py  report_binding.py  server.py  svg_measures.py
src/pbix_mcp/assets/pbix_html_visual/: README.md  pbixHtml5C3A2F1E9B7D46A8C0E1D2F3A4B5C6D7.1.0.0.0.pbiviz  (+2 more)
src/pbix_mcp/dax/: __init__.py  calc_tables.py  engine.py
src/pbix_mcp/formats/: __init__.py  abf_builder.py  abf_from_scratch.py  abf_rebuild.py  abf_splice.py  datamodel_roundtrip.py  metadata_schema.py  model_reader.py  vertipaq_decoder.py  vertipaq_encoder.py
src/pbix_mcp/models/: __init__.py  requests.py  responses.py
tests/: test_abf_splice_datasize.py  test_beta_features.py  test_cross_report.py  test_dax_accuracy.py  test_dax_engine.py  test_dax_multihop.py  test_default_filters_cache.py  test_e2e.py  test_errors_and_models.py  test_fixtures.py  test_found_issues.py  test_golden.py  test_html_visuals.py  test_images.py  test_large_string_roundtrip.py  test_nullable_hierarchy.py  test_perf_per_dimension.py  test_relationship_semantics.py  test_report_binding.py  test_rich_content.py  test_vertipaq_decode.py  test_zip_safety.py
tests/fixtures/expected/: basic_layout.json  dax_golden.json  geosales_schema.json
tests/fixtures/pbix/: basic_layout.pbix  basic_measures.pbix  from_scratch.pbix  with_data.pbix
(+4 files in other folders)
