[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbix-mcp"
version = "0.9.1"
description = "MCP server for creating, reading, writing, and evaluating Power BI .pbix/.pbit files — no Power BI Desktop required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "d0nk3yhm" },
]
keywords = ["powerbi", "pbix", "mcp", "dax", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.0.0",
    "xpress9",
    "pydantic>=2.0",
    "apsw",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
]

[project.scripts]
pbix-mcp-server = "pbix_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/d0nk3yhm/pbix-mcp"
Repository = "https://github.com/d0nk3yhm/pbix-mcp"
Issues = "https://github.com/d0nk3yhm/pbix-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pbix_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line length handled by formatter
    "E701",  # multiple statements on one line (colon) — used in compact try/except
    "E702",  # multiple statements on one line (semicolon) — used in binary format code
    "E712",  # comparison to True/False — intentional in test assertions
    "E722",  # bare except — used for resilience in format parsers
    "F841",  # local variable assigned but unused — some used for documentation
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: tests requiring PBIX files",
    "golden: artifact-based regression tests",
    "slow: tests that take >30s",
]
